# r3kit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: algo_tare_linear.md  device_camera_realsense.md  device_camera_vive_ultimate.md  device_encoder_pdcd_angle.md  device_gripper_xense.md  device_robot_flexiv.md  device_tracker_vive3.md  device_tracker_vive_ultimate.md
examples/: calib.py  collect.py  deploy_client.py  deploy_server.py  teleop_client.py  teleop_server.py
r3kit/: __init__.py
r3kit/algos/align/: cpd.py  disp2metric.py  icp.py  ransac.py  umeyama.py  vanilla.py
r3kit/algos/calib/: aruco.py  chessboard.py  config.py  handeye.py
r3kit/algos/fit/: arc.py  line.py
r3kit/algos/kinematics/: urdf.py
r3kit/algos/tare/: linear.py
r3kit/devices/: __init__.py  base.py  config.py
r3kit/devices/camera/: __init__.py
r3kit/devices/camera/fish_camera/: __init__.py  camera.py  config.py
r3kit/devices/camera/realsense/: config.py  d415.py  general.py  l515.py  query.py  t265.py
r3kit/devices/camera/vive/: config.py  context_object.py  ultimate.py
r3kit/devices/camera/xense/: __init__.py  config.py  xense.py
r3kit/devices/encoder/pdcd/: angler.py  config.py
r3kit/devices/ftsensor/ati/: pyati.py
r3kit/devices/ftsensor/robotiq/: ft300.py
r3kit/devices/ftsensor/sri/: config.py  m8128.py
r3kit/devices/gripper/franka/: panda.py
r3kit/devices/gripper/xense/: config.py  xense.py
r3kit/devices/tracker/: __init__.py  base.py
r3kit/utils/: buffer.py  camera.py  color.py  data.py  mask.py  pc.py  reset.py  transformation.py  vis.py
(+14 files in other folders)
